Updated the ChatFilter & Spam Filter